crates/java-syntax/tests/snapshots/parser_snapshots__parse_enhanced_for_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        String[] strings;
        for (String s: strings) {}
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "String"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "strings"
SEMICOLON ";"
WHITESPACE "\n        "
FOR_KW "for"
WHITESPACE " "
L_PAREN "("
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
COLON ":"
WHITESPACE " "
IDENTIFIER "strings"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..100
  CLASS_DECL@0..99
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    CLASS_BODY@10..99
      WHITESPACE@10..11 " "
      L_BRACE@11..12 "{"
      METHOD_DECL@12..97
        WHITESPACE@12..17 "\n    "
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        BLOCK@28..97
          WHITESPACE@28..29 " "
          L_BRACE@29..30 "{"
          LOCAL_VARIABLE_DECLARATION_STMT@30..56
            WHITESPACE@30..39 "\n        "
            LOCAL_VARIABLE_DECLARATION@39..55
              TYPE@39..47
                QUALIFIED_NAME@39..45
                  IDENTIFIER@39..45 "String"
                DIMENSIONS@45..47
                  DIMENSION@45..47
                    L_BRACKET@45..46 "["
                    R_BRACKET@46..47 "]"
              VARIABLE_DECLARATOR_LIST@47..55
                WHITESPACE@47..48 " "
                VARIABLE_DECLARATOR@48..55
                  IDENTIFIER@48..55 "strings"
            SEMICOLON@55..56 ";"
          ENHANCED_FOR_STMT@56..91
            WHITESPACE@56..65 "\n        "
            FOR_KW@65..68 "for"
            WHITESPACE@68..69 " "
            L_PAREN@69..70 "("
            TYPE@70..76
              QUALIFIED_NAME@70..76
                IDENTIFIER@70..76 "String"
            VARIABLE_DECLARATOR@76..78
              WHITESPACE@76..77 " "
              IDENTIFIER@77..78 "s"
            COLON@78..79 ":"
            LITERAL@79..87
              WHITESPACE@79..80 " "
              IDENTIFIER@80..87 "strings"
            R_PAREN@87..88 ")"
            BLOCK@88..91
              WHITESPACE@88..89 " "
              L_BRACE@89..90 "{"
              R_BRACE@90..91 "}"
          WHITESPACE@91..96 "\n    "
          R_BRACE@96..97 "}"
      WHITESPACE@97..98 "\n"
      R_BRACE@98..99 "}"
  WHITESPACE@99..100 "\n"
