crates/java-syntax/tests/snapshots/parser_snapshots__parse_enum_constants_with_trailing_comma.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
enum E { A, B, C, }
TOKENS:
ENUM_KW "enum"
WHITESPACE " "
IDENTIFIER "E"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
COMMA ","
WHITESPACE " "
IDENTIFIER "B"
COMMA ","
WHITESPACE " "
IDENTIFIER "C"
COMMA ","
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  ENUM_DECL
    MODIFIER_LIST
    ENUM_KW "enum"
    WHITESPACE " "
    IDENTIFIER "E"
    ENUM_BODY
      WHITESPACE " "
      L_BRACE "{"
      ENUM_CONSTANT
        WHITESPACE " "
        IDENTIFIER "A"
      COMMA ","
      ENUM_CONSTANT
        WHITESPACE " "
        IDENTIFIER "B"
      COMMA ","
      ENUM_CONSTANT
        WHITESPACE " "
        IDENTIFIER "C"
      COMMA ","
      WHITESPACE " "
      R_BRACE "}"
