crates/java-syntax/tests/snapshots/parser_snapshots__parse_field_with_super_wildcard.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { List<? super Integer> xs; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
QUESTION "?"
WHITESPACE " "
SUPER_KW "super"
WHITESPACE " "
IDENTIFIER "Integer"
GREATER ">"
WHITESPACE " "
IDENTIFIER "xs"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    MODIFIER_LIST
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "A"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        MODIFIER_LIST
        TYPE
          WHITESPACE " "
          IDENTIFIER "List"
          TYPE_ARGUMENTS
            LESS "<"
            TYPE_ARGUMENT
              WILDCARD_TYPE
                QUESTION "?"
                WILDCARD_BOUNDS
                  WHITESPACE " "
                  SUPER_KW "super"
                  TYPE
                    WHITESPACE " "
                    IDENTIFIER "Integer"
            GREATER ">"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "xs"
        SEMICOLON ";"
      WHITESPACE " "
      R_BRACE "}"
