crates/java-syntax/tests/snapshots/parser_snapshots__parse_import_decl.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
import java.util.List;
TOKENS:
IMPORT_KW "import"
WHITESPACE " "
IDENTIFIER "java"
DOT "."
IDENTIFIER "util"
DOT "."
IDENTIFIER "List"
SEMICOLON ";"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  IMPORT_DECL
    IMPORT_KW "import"
    IMPORT_PATH
      WHITESPACE " "
      IDENTIFIER "java"
      DOT "."
      IDENTIFIER "util"
      DOT "."
      IDENTIFIER "List"
    SEMICOLON ";"
